--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <section class="filters__section" id="events-panel">
                 <div class="cards">
                     <div class="card cards__card" id="event-1" data-filtered="true">
-                        <img src="./img/exhibition-1.jpeg" alt=" " class="card__image">
+                        <img src="./img/exhibition-1.jpeg" alt=" " role="presentation" class="card__image">
                         <h3 class="card__heading" id="exhibition-1">Святослав Рихтер в кругу друзей. Москва — Коктебель</h3>
                         <p class="card__subheading">Выставка до 20 ноября</p>
                         <p class="card__text">Текст о музее текст Текст о музее текст Текст о музее текст Текст о музее текст</p>
@@ -102,7 +102,7 @@
                         </p>
                     </div>
                     <div class="card cards__card" id="event-2" data-filtered="true">
-                        <img src="./img/exhibition-2.jpeg" alt=" " class="card__image">
+                        <img src="./img/exhibition-2.jpeg" alt=" " role="presentation" class="card__image">
                         <h3 class="card__heading" id="exhibition-2">Тату</h3>
                         <p class="card__subheading">Выставка до 27 сентября</p>
                         <p class="card__text">Текст о музее текст Текст о музее текст Текст о музее текст Текст о музее текст</p>
@@ -111,7 +111,7 @@
                         </p>
                     </div>
                     <div class="card cards__card" id="event-3" data-filtered="true">
-                        <img src="./img/exhibition-3.jpeg" alt=" " class="card__image">
+                        <img src="./img/exhibition-3.jpeg" alt=" " role="presentation" class="card__image">
                         <h3 class="card__heading" id="exhibition-3">От Дюрера до Матисса. Избранные рисунки из собрания ГМИИ им. А.С. Пушкина</h3>
                         <p class="card__subheading">Выставка до 1 ноября</p>
                         <p class="card__text">Текст о музее текст Текст о музее текст Текст о музее текст Текст о музее текст</p>
@@ -141,7 +141,7 @@
                 
                 <div class="cards">
                     <div class="card cards__card">
-                        <img src="./img/building-1.jpeg" alt=" " class="card__image">
+                        <img src="./img/building-1.jpeg" alt=" " role="presentation" class="card__image">
                         <h3 class="card__heading" id="building-1">МЕМОРИАЛЬНАЯ КВАРТИРА С.Т. РИХТЕРА</h3>
                         <p class="card__text">ул. Большая Бронная, 2/6, 16 этаж, кв. 58</p>
                         <p class="card__text">
@@ -149,7 +149,7 @@
                         </p>
                     </div>
                     <div class="card cards__card">
-                        <img src="./img/building-2.jpeg" alt=" " class="card__image">
+                        <img src="./img/building-2.jpeg" alt=" " role="presentation" class="card__image">
                         <h3 class="card__heading" id="building-2">ЦЭВ «МУСЕЙОН»</h3>
                         <p class="card__text">Колымажный пер., 6/2, 3 (вход с Малого Знаменского переулка)</p>
                         <p class="card__text">
@@ -157,7 +157,7 @@
                         </p>
                     </div>
                     <div class="card cards__card">
-                        <img src="./img/building-3.jpeg" alt=" " class="card__image">
+                        <img src="./img/building-3.jpeg" alt=" " role="presentation" class="card__image">
                         <h3 class="card__heading" id="building-3">УСАДЬБА ЛОПУХИНЫХ</h3>
                         <p class="card__text">Малый Знаменский пер., 3/5с4</p>
                         <p class="card__text">
@@ -165,7 +165,7 @@
                         </p>
                     </div>
                     <div class="card cards__card">
-                        <img src="./img/building-1.jpeg" alt=" " class="card__image">
+                        <img src="./img/building-1.jpeg" alt=" " role="presentation" class="card__image">
                         <h3 class="card__heading" id="building-4">УЧЕБНЫЙ МУЗЕЙ</h3>
                         <p class="card__text">ул. Чаянова, 15</p>
                         <p class="card__text">
@@ -173,7 +173,7 @@
                         </p>
                     </div>
                     <div class="card cards__card">
-                        <img src="./img/building-2.jpeg" alt=" " class="card__image">
+                        <img src="./img/building-2.jpeg" alt=" " role="presentation" class="card__image">
                         <h3 class="card__heading" id="building-5">ОТДЕЛ ЛИЧНЫХ КОЛЛЕКЦИЙ</h3>
                         <p class="card__text">ул. Волхонка, 10</p>
                         <p class="card__text">
@@ -181,7 +181,7 @@
                         </p>
                     </div>
                     <div class="card cards__card">
-                        <img src="./img/building-3.jpeg" alt=" " class="card__image">
+                        <img src="./img/building-3.jpeg" alt=" " role="presentation" class="card__image">
                         <h3 class="card__heading" id="building-6">ГАЛЕРЕЯ</h3>
                         <p class="card__text">ул. Волхонка, 14</p>
                         <p class="card__text">
